@@ -41,6 +41,7 @@ module Fairy
 #CONF.MASTER_MAX_ACTIVE_PROCESSORS = 2
 
 ##CONF.CONTROLLER_INPUT_PROCESSOR_N = 10
+CONF.CONTROLLER_INPUT_PROCESSOR_N = 2
 ## 生成されるプロセッサの上限. nilなら無制限. 
 
 ##CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
@@ -84,7 +85,7 @@ CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 ##CONF.LOCAL_OUTPUT_POOL_THRESHOLD = 32000
 
 ##CONF.N_MOD_GROUP_BY = 5
-#CONF.N_MOD_GROUP_BY = 10
+CONF.N_MOD_GROUP_BY = 40
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 #CONF.HASH_MODULE = "fairy/share/hash-1"
 ##CONF.HASH_MODULE = "fairy/share/hash-md5"
