@@ -89,6 +89,7 @@ module Fairy
     def_prop :MASTER_MAX_ACTIVE_PROCESSORS
 
     def_prop :CONTROLLER_INPUT_PROCESSOR_N
+    def_prop :CONTROLLER_MAX_ACTIVE_NTASKS_IN_PROCESSOR
 
     def_prop :CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR
 
@@ -253,6 +254,7 @@ module Fairy
   DEFAULT_CONF.MASTER_MAX_ACTIVE_PROCESSORS = 4
 
   DEFAULT_CONF.CONTROLLER_INPUT_PROCESSOR_N = 10
+  DEFAULT_CONF.CONTROLLER_MAX_ACTIVE_NTASKS_IN_PROCESSOR = 10
 
   DEFAULT_CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
 
