@@ -3513,7 +3513,9 @@ when "69.2.3"
 when "69.2.4"
 #  f = fairy.input(["sample/wc/data/sample_30M.txt"]*120)
 #  f = fairy.input(["sample/wc/data/sample_30M.txt"]*4)
-  f = fairy.input(["sample/wc/data/sample_10M.txt"]*2)
+#  f = fairy.input(["sample/wc/data/sample_10M.txt"]*10)
+  f = fairy.input(["sample/wc/data/sample_10M.txt",
+		    "file://giant//home/keiju/public/a.research/fairy/git/fairy/sample/wc/data/sample_10M.txt"]*60)
 #  f = fairy.input(["sample/wc/data/sample_30M.txt"]*30)
   f = f.mapf(%{|ln| begin
                       ln.chomp.split
